# test_env_poetry

./: pyproject.toml  test.py
